[package]
name = "pingapi"
version = "0.1.0"
authors = ["Yasamato <agent77326@gmail.com>"]
edition = "2018"
repository = "https://github.com/ranimepiracy/pingapi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["compress", "openssl"] }
actix-cors = "0.5.4"
actix-socks = { git = "https://github.com/ranimepiracy/actix-socks" }
env_logger = "0.8.3"
log = "0.4.14"
openssl = "0.10.33"
redis = "0.20.0"
regex = "1.4.5"
serde = "1.0.125"
lazy_static = "1.4"
