[package]
name = "pingapi"
version = "0.1.0"
authors = ["Yasamato <agent77326@gmail.com>"]
edition = "2018"
repository = "https://github.com/ranimepiracy/pingapi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["compress", "openssl"] }
actix-cors = "0.5.4"
env_logger = "0.9"
reqwest = "0.10"
log = "0.4"
openssl = "0.10"
redis = "0.21"
regex = "1.5"
serde = "1"
