[package]
name = "pingapi"
version = "0.2.0"
authors = ["Marek <notmarek1337@gmail.com>"]
edition = "2018"
repository = "https://github.com/ranimepiracy/pingapi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.8", features = ["openssl"] }
actix-cors = "0.6.0-beta.2"
env_logger = "0.9"
reqwest = { version="0.11", features=["json"] }
log = "0.4"
openssl = "0.10"
redis = { version="0.21", features = ["aio", "tokio-comp"] }
futures = "0.3"
regex = "1"
serde = "1"
serde_json = "1"
lazy_static = "1"
actix-rt = "2"